--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,8 @@
 [package]
 name = "mwa_rust_core"
 version = "0.1.0"
-authors = ["Christopher H. Jordan <christopherjordan87@gmail.com>"]
+authors = ["Christopher H. Jordan <christopherjordan87@gmail.com>",
+           "Derwent McElhinney <derwent.mcelhinney@curtin.edu.au>"]
 edition = "2018"
 license = "MPL-2.0"
 readme = "README.md"
