--- a/.github/workflows/run-tests.yaml
+++ b/.github/workflows/run-tests.yaml
@@ -51,7 +51,11 @@ jobs:
         fi
 
     - name: Run tests
-      run: cargo test
+      run: |
+        # TODO: kill this with fire.
+        cargo update -p approx:0.5.0 --precise 0.4.0
+        cargo update -p ndarray:0.15.3 --precise 0.14.0
+        cargo test
 
   test-without-mwalib:
     name: Test ${{ matrix.os }} without mwalib
@@ -96,4 +100,8 @@ jobs:
         fi
 
     - name: Run tests
-      run: cargo test --no-default-features
+      run: |
+        # TODO: kill this with fire.
+        cargo update -p approx:0.5.0 --precise 0.4.0
+        cargo update -p ndarray:0.15.3 --precise 0.14.0
+        cargo test --no-default-features
