--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,11 +26,8 @@ lazy_static = "1.4.0"
 log = "0.4.*"
 num-traits = "0.2.*"
 rayon = "~1"
-# rubbl_core = "0.3.0"
-# rubbl_casatables = "0.4.0"
-# this is only necessary until the next casatables release
-rubbl_core = { git = "https://github.com/derwentx/rubbl.git", branch="links" }
-rubbl_casatables = { git = "https://github.com/derwentx/rubbl.git", branch="links" }
+rubbl_core = "0.3.0"
+rubbl_casatables = "0.5.1"
 tar = "0.4.37"
 thiserror = "1.0.*"
 
