implement measure reference descriptions and source table

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,8 +26,13 @@ lazy_static = "1.4.0"
 log = "0.4.*"
 num-traits = "0.2.*"
 rayon = "~1"
-rubbl_core = "0.3.0"
-rubbl_casatables = "0.5.1"
+# rubbl_core = "0.3.0"
+# rubbl_casatables = "0.5.1"
+rubbl_core = { git = "https://github.com/derwentx/rubbl.git", branch = "measure", package = "rubbl_core" }
+rubbl_casatables = { git = "https://github.com/derwentx/rubbl.git", branch = "measure", package = "rubbl_casatables" }
+# rubbl_core = { path = "../rubbl/core" }
+# rubbl_casatables = { path = "../rubbl/casatables" }
+
 tar = "0.4.37"
 thiserror = "1.0.*"
 
