--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,7 @@ all-static = ["erfa-static", "cfitsio-static"]
 [dependencies]
 erfa-sys = "0.1.*"
 flate2 = "1.0.20"
-hifitime = "2.2.*"
+hifitime = "^2.3.0"
 itertools = "0.10"
 lazy_static = "1.4.0"
 log = "0.4.*"
@@ -30,22 +30,16 @@ num-traits = "0.2.*"
 rayon = "~1"
 rubbl_core = "0.3.0"
 rubbl_casatables = "0.6.0"
-# rubbl_core = { git = "https://github.com/derwentx/rubbl.git", branch = "measure", package = "rubbl_core" }
-# rubbl_casatables = { git = "https://github.com/derwentx/rubbl.git", branch = "measure", package = "rubbl_casatables" }
-# rubbl_core = { path = "../rubbl/core" }
-# rubbl_casatables = { path = "../rubbl/casatables" }
-
 tar = "0.4.37"
 thiserror = "1.0.*"
+mwalib = { version = ">=0.9.4", optional = true }
 
 # Needed to implement AbsDiffEq on the Jones type. Makes testing much easier!
 # ndarray 0.14.* depends on approx 0.4.0, which in turn uses num-complex 0.3.0.
 # Forcing the versions here means that ndarrays of complex numbers can be
 # tested!
-approx = { version = "0.4.0", features = ["num-complex"] }
 ndarray = { version = "0.14.*", features = ["approx"] }
 
-mwalib = { version = ">=0.9.4", optional = true }
 [dev-dependencies]
 criterion = "0.3.*"
 tempfile = "3.2"
