--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ hifitime = "^2.3.0"
 itertools = "0.10"
 lazy_static = "1.4.0"
 log = "0.4.*"
+ndarray = { version = ">=0.15.4,<0.16", features = ["rayon"] }
 num-traits = "0.2.*"
 rayon = "~1"
 rubbl_core = "0.3.0"
@@ -34,15 +35,10 @@ tar = "0.4.37"
 thiserror = "1.0.*"
 mwalib = { version = ">=0.12.0", optional = true }
 
-# Needed to implement AbsDiffEq on the Jones type. Makes testing much easier!
-# ndarray 0.14.* depends on approx 0.4.0, which in turn uses num-complex 0.3.0.
-# Forcing the versions here means that ndarrays of complex numbers can be
-# tested!
-ndarray = { version = "0.14.*", features = ["approx"] }
-
 [dev-dependencies]
 criterion = "0.3.*"
 tempfile = "3.2"
+ndarray = { version = ">=0.15.4,<0.16", features = ["approx-0_5"] }
 
 [[bench]]
 name = "bench"
