--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,9 +37,14 @@ mwalib = { version = ">=0.12.0", optional = true }
 
 [dev-dependencies]
 criterion = "0.3.*"
+glob = "0.3"
 tempfile = "3.2"
 ndarray = { version = ">=0.15.4,<0.16", features = ["approx-0_5"] }
 
 [[bench]]
-name = "bench"
+name = "bench_misc"
+harness = false
+
+[[bench]]
+name = "bench_io"
 harness = false
