--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,12 +34,15 @@ rubbl_casatables = "0.6.0"
 tar = "0.4.37"
 thiserror = "1.0.*"
 mwalib = { version = ">=0.12.0", optional = true }
+# DELETEME:
+coz = "0.1"
 
 [dev-dependencies]
 criterion = "0.3.*"
 glob = "0.3"
 tempfile = "3.2"
 ndarray = { version = ">=0.15.4,<0.16", features = ["approx-0_5"] }
+rand = "0.3.0"
 
 [[bench]]
 name = "bench_misc"
@@ -48,3 +51,7 @@ harness = false
 [[bench]]
 name = "bench_io"
 harness = false
+
+# DELETEME:
+[profile.release]
+debug=1
