--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "marlu"
-version = "0.2.3"
+version = "0.3.0"
 authors = ["Christopher H. Jordan <christopherjordan87@gmail.com>",
            "Derwent McElhinney <derwent.mcelhinney@curtin.edu.au>"]
 edition = "2018"
@@ -14,12 +14,18 @@ categories = ["science"]
 exclude = ["tests/*", ".vscode/*", ".github/*", ".talismanrc"]
 
 [features]
-default = ["mwalib"]
+default = ["io", "mwalib"]
+
+# Provide IO code. Pulls in heavy dependencies like rubbl.
+io = ["rubbl_core", "rubbl_casatables"]
+
+# Compile various C libraries statically.
 erfa-static = ["erfa-sys/static"]
 cfitsio-static = ["mwalib/cfitsio-static"]
 all-static = ["erfa-static", "cfitsio-static"]
 
 [dependencies]
+cfg-if = "1.0.*"
 erfa-sys = "0.1.*"
 flate2 = "1.0.20"
 hifitime = "^2.3.0"
@@ -27,15 +33,18 @@ itertools = "0.10"
 lazy_static = "1.4.0"
 log = "0.4.*"
 ndarray = { version = ">=0.15.4,<0.16", features = ["rayon"] }
+num-complex = "0.4.*"
 num-traits = "0.2.*"
 rayon = "~1"
-rubbl_core = "0.3.0"
-rubbl_casatables = "0.6.0"
 tar = "0.4.37"
 thiserror = "1.0.*"
 mwalib = { version = ">=0.12.0", optional = true }
 
+rubbl_core = { version = "0.3.0", optional = true }
+rubbl_casatables = { version = "0.6.0", optional = true }
+
 [dev-dependencies]
+approx = { version = "0.5.*", features = ["num-complex"] }
 criterion = "0.3.*"
 glob = "0.3"
 tempfile = "3.2"
