--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,8 @@ name = "marlu"
 version = "0.3.0"
 authors = ["Christopher H. Jordan <christopherjordan87@gmail.com>",
            "Derwent McElhinney <derwent.mcelhinney@curtin.edu.au>"]
-edition = "2018"
+edition = "2021"
+rust-version = "1.56"
 license = "MPL-2.0"
 readme = "README.md"
 description = "Convenience Rust code that handles coordinate transformations, Jones matrices, I/O. for the Murchison Widefield Array (MWA) radio telescope. Previously known as mwa_rust_core"
