--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "marlu"
-version = "0.3.0"
+version = "0.3.1"
 authors = ["Christopher H. Jordan <christopherjordan87@gmail.com>",
            "Derwent McElhinney <derwent.mcelhinney@curtin.edu.au>"]
 edition = "2021"
@@ -32,16 +32,16 @@ all-static = ["erfa-static", "cfitsio-static", "cuda-static"]
 [dependencies]
 cfg-if = "1.0.*"
 erfa-sys = "0.1.*"
-flate2 = "1.0.20"
+flate2 = "1.0.*"
 hifitime = "^2.3.0"
 itertools = "0.10"
-lazy_static = "1.4.0"
+lazy_static = "1.4.*"
 log = "0.4.*"
 ndarray = { version = ">=0.15.4,<0.16", features = ["rayon"] }
 num-complex = "0.4.*"
 num-traits = "0.2.*"
 rayon = "~1"
-tar = "0.4.37"
+tar = "0.4.*"
 thiserror = "1.0.*"
 mwalib = { version = ">=0.12.0", optional = true }
 
@@ -54,7 +54,7 @@ cuda-runtime-sys = { version = "0.3.0-alpha.1", optional = true }
 approx = { version = "0.5.*", features = ["num-complex"] }
 criterion = "0.3.*"
 glob = "0.3"
-tempfile = "3.2"
+tempfile = "3.3"
 ndarray = { version = ">=0.15.4,<0.16", features = ["approx-0_5"] }
 serial_test = "0.5.*"
 
