--- a/Cargo.toml
+++ b/Cargo.toml
@@ -57,6 +57,9 @@ glob = "0.3"
 tempfile = "3.3"
 ndarray = { version = ">=0.15.4,<0.16", features = ["approx-0_5"] }
 serial_test = "0.5.*"
+csv = "1.1"
+lexical = "6.0"
+regex = "1.4"
 
 [[bench]]
 name = "bench_misc"
