--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,7 @@ erfa-sys = "0.1.*"
 flate2 = "1.0.*"
 hifitime = "^2.3.0"
 itertools = "0.10"
+indicatif = { version = "0.16", features = ["rayon"] }
 lazy_static = "1.4.*"
 log = "0.4.*"
 ndarray = { version = ">=0.15.4,<0.16", features = ["rayon"] }
