--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "marlu"
-version = "0.4.0"
+version = "0.5.0"
 authors = ["Christopher H. Jordan <christopherjordan87@gmail.com>",
            "Derwent McElhinney <derwent.mcelhinney@curtin.edu.au>"]
 edition = "2021"
@@ -44,7 +44,7 @@ num-traits = "0.2.*"
 rayon = "~1"
 tar = "0.4.*"
 thiserror = "1.0.*"
-mwalib = { version = ">=0.12.0", optional = true }
+mwalib = { version = "0.13.*", optional = true }
 
 rubbl_core = { version = "0.3.0", optional = true }
 rubbl_casatables = { version = "0.6.0", optional = true }
