--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,7 +33,7 @@ all-static = ["erfa-static", "cfitsio-static", "cuda-static"]
 cfg-if = "1.0.0"
 erfa-sys = "0.1.2"
 flate2 = "1.0.13"
-hifitime = "2.3.0"
+hifitime = "3.0.0-beta.1"
 itertools = "0.10.0"
 indicatif = { version = "0.16.0", features = ["rayon"] }
 lazy_static = "1.4.0"
