--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "marlu"
-version = "0.5.0"
+version = "0.6.0-beta.1"
 authors = ["Christopher H. Jordan <christopherjordan87@gmail.com>",
            "Derwent McElhinney <derwent.mcelhinney@curtin.edu.au>"]
 edition = "2021"
@@ -18,7 +18,7 @@ exclude = ["tests/*", ".vscode/*", ".github/*", ".talismanrc"]
 default = ["io", "mwalib"]
 
 # Provide IO code. Pulls in heavy dependencies like rubbl.
-io = ["rubbl_core", "rubbl_casatables"]
+io = ["rubbl_core", "rubbl_casatables", "approx"]
 
 # Provide CUDA convenience code
 cuda = ["cuda-runtime-sys"]
@@ -30,11 +30,14 @@ cuda-static = []
 all-static = ["erfa-static", "cfitsio-static", "cuda-static"]
 
 [dependencies]
+approx = { version = "0.5.0", features = ["num-complex"], optional = true }
 cfg-if = "1.0.0"
+crossbeam-channel = "0.5"
+crossbeam-utils = "0.8"
 cuda-runtime-sys = { version = "0.3.0-alpha.1", optional = true }
 erfa-sys = "0.1.2"
 flate2 = "1.0.13"
-hifitime = "3.0.0-beta.1"
+hifitime = "3.0.0"
 indicatif = { version = "0.16.0", features = ["rayon"] }
 itertools = "0.10.0"
 lazy_static = "1.4.0"
