better error handling in io

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,6 +36,7 @@ crossbeam-channel = "0.5"
 crossbeam-utils = "0.8"
 cuda-runtime-sys = { version = "0.3.0-alpha.1", optional = true }
 erfa-sys = "0.1.2"
+failure = "^0.1"
 flate2 = "1.0.13"
 hifitime = "3.0.0"
 indicatif = { version = "0.16.0", features = ["rayon"] }
