--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "marlu"
-version = "0.6.0-beta.1"
+version = "0.6.0"
 authors = ["Christopher H. Jordan <christopherjordan87@gmail.com>",
-           "Derwent McElhinney <derwent.mcelhinney@curtin.edu.au>"]
+           "Dev Null <dev.null@curtin.edu.au>"]
 edition = "2021"
 rust-version = "1.58"
 license = "MPL-2.0"
