--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,10 @@
 [package]
 name = "marlu"
-version = "0.6.0"
-authors = ["Christopher H. Jordan <christopherjordan87@gmail.com>",
-           "Dev Null <dev.null@curtin.edu.au>"]
+version = "0.6.1"
+authors = [
+    "Christopher H. Jordan <christopherjordan87@gmail.com>",
+    "Dev Null <dev.null@curtin.edu.au>",
+]
 edition = "2021"
 rust-version = "1.58"
 license = "MPL-2.0"
