--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,7 +46,7 @@ itertools = "0.10.0"
 lazy_static = "1.4.0"
 log = "0.4.4"
 mwalib = { version = "0.13.0", optional = true }
-ndarray = { version = ">=0.15.4,<0.16", features = ["rayon"] }
+ndarray = { version = "0.15.4", features = ["rayon"] }
 num-complex = "0.4.0"
 num-traits = "0.2.0"
 rayon = "1.5.0"
@@ -61,7 +61,7 @@ criterion = "0.3.0"
 csv = "1.1.0"
 glob = "0.3.0"
 lexical = "6.0.0"
-ndarray = { version = ">=0.15.4,<0.16", features = ["approx-0_5"] }
+ndarray = { version = "0.15.4", features = ["approx-0_5"] }
 regex = "1.5.0"
 serial_test = "0.5.0"
 tempfile = "3.3.0"
