--- a/Cargo.toml
+++ b/Cargo.toml
@@ -66,6 +66,9 @@ regex = "1.5.0"
 serial_test = "0.5.0"
 tempfile = "3.3.0"
 
+[build-dependencies]
+built = "0.5.1"
+
 [[bench]]
 name = "bench_misc"
 harness = false
