Make Jones ABI stable and add approx impls.
`Jones` is now `#[repr(transparent)]`, which is important for safety
when doing thing like transmuting.

`approx` is now a Marlu feature, that when enabled, exposes trait
implementations `AbsDiffEq` and `RelativeEq` on all coordinate types.

Also derive `PartialEq` for a handful of coordinate types that had it
missing, as well as `Eq` for `Jones`.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,9 @@ io = ["rubbl_core", "rubbl_casatables", "approx"]
 # Provide CUDA convenience code
 cuda = ["cuda-runtime-sys"]
 
+# Provide approx traits on data types
+approx = ["dep:approx"]
+
 # Compile various C libraries statically.
 erfa-static = ["erfa-sys/static"]
 cfitsio-static = ["mwalib/cfitsio-static"]
