--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "marlu"
-version = "0.7.2"
+version = "0.8.0"
 authors = [
     "Christopher H. Jordan <christopherjordan87@gmail.com>",
     "Dev Null <dev.null@curtin.edu.au>",
@@ -42,14 +42,12 @@ all-static = ["erfa-static", "cfitsio-static", "cuda-static"]
 
 [dependencies]
 cfg-if = "1.0.0"
-crossbeam-channel = "0.5"
-crossbeam-utils = "0.8"
 erfa-sys = "0.2.0"
 hifitime = "3.0.0"
-indicatif = { version = "0.16.0", features = ["rayon"] }
+indicatif = { version = "0.17.0", features = ["rayon"] }
 itertools = "0.10.0"
 lazy_static = "1.4.0"
-log = "0.4.4"
+log = "0.4.14"
 ndarray = { version = "0.15.4", features = ["rayon"] }
 num-complex = "0.4.0"
 num-traits = "0.2.0"
@@ -62,10 +60,10 @@ fitsio = { version = "0.19.0", optional = true }
 fitsio-sys = { version = "0.4.0", optional = true }
 
 # "mwalib" feature
-mwalib = { version = "0.15.0", optional = true }
+mwalib = { version = "0.15.1", optional = true }
 
 # "ms" feature
-failure = { version = "^0.1", optional = true }
+failure = { version = "0.1.5", optional = true }
 flate2 = { version = "1.0.13", optional = true }
 rubbl_casatables = { version = "0.6.0", optional = true }
 rubbl_core = { version = "0.3.0", optional = true }
@@ -84,7 +82,7 @@ glob = "0.3.0"
 lexical = "6.0.0"
 ndarray = { version = "0.15.4", features = ["approx-0_5"] }
 regex = "1.5.0"
-serial_test = "0.5.0"
+serial_test = "0.9.0"
 tempfile = "3.3.0"
 
 [build-dependencies]
