Add serde traits to RADec.
This commit adds serde as an optional dependency, and allows for `RADec`
to be serialised or deserialised, where the serialised units are degrees
but the deserialised units are radians.

--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -94,6 +94,9 @@ jobs:
     - name: Run tests, no default features but ms and approx
       run: cargo test --no-default-features --features=ms,approx
 
+    - name: Run tests, no default features but serde
+      run: cargo test --no-default-features --features=serde
+
     - name: Minimum-specified Rust version works
       run: |
         MIN_RUST=$(grep -m1 "rust-version" Cargo.toml | sed 's|.*\"\(.*\)\"|\1|')
