--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,9 @@ cuda = ["cuda-runtime-sys"]
 # Provide approx traits on data types
 approx = ["dep:approx"]
 
+# Provide serialize and deserialize traits on data types
+serde = ["dep:serde"]
+
 # Compile various C libraries statically.
 erfa-static = ["erfa-sys/static"]
 cfitsio-static = ["mwalib/cfitsio-static"]
@@ -74,6 +77,9 @@ cuda-runtime-sys = { version = "0.3.0-alpha.1", optional = true }
 # "approx" feature
 approx = { version = "0.5.0", features = ["num-complex"], optional = true }
 
+# "serde" feature
+serde = { version = "1.0.100", features = ["derive"], optional = true }
+
 [dev-dependencies]
 approx = { version = "0.5.0", features = ["num-complex"] }
 criterion = "0.3.0"
@@ -82,6 +88,7 @@ glob = "0.3.0"
 lexical = "6.0.0"
 ndarray = { version = "0.15.4", features = ["approx-0_5"] }
 regex = "1.5.0"
+serde_json = "1.0.0"
 serial_test = "0.9.0"
 tempfile = "3.3.0"
 
