--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,9 +28,6 @@ mwalib = ["dep:mwalib", "cfitsio"]
 # Provide measurement set IO code.
 ms = ["rubbl_core", "rubbl_casatables", "failure", "flate2"]
 
-# Provide CUDA convenience code
-cuda = ["cuda-runtime-sys"]
-
 # Provide approx traits on data types
 approx = ["dep:approx"]
 
@@ -39,8 +36,7 @@ serde = ["dep:serde"]
 
 # Compile various C libraries statically.
 cfitsio-static = ["mwalib/cfitsio-static"]
-cuda-static = []
-all-static = ["cfitsio-static", "cuda-static"]
+all-static = ["cfitsio-static"]
 
 [dependencies]
 cfg-if = "1.0.0"
@@ -69,9 +65,6 @@ failure = { version = "0.1.5", optional = true }
 flate2 = { version = "1.0.13", optional = true }
 rubbl_casatables = { version = "0.6.0", optional = true }
 rubbl_core = { version = "0.3.0", optional = true }
-
-# "cuda" feature
-cuda-runtime-sys = { version = "0.3.0-alpha.1", optional = true }
 
 # "approx" feature
 approx = { version = "0.5.0", features = ["num-complex"], optional = true }
