--- a/Cargo.toml
+++ b/Cargo.toml
@@ -63,7 +63,7 @@ mwalib = { version = "0.16.0", optional = true }
 # "ms" feature
 failure = { version = "0.1.5", optional = true }
 flate2 = { version = "1.0.13", optional = true }
-rubbl_casatables = { version = "0.6.0", optional = true }
+rubbl_casatables = { git = "https://github.com/d3v-null/rubbl.git", branch = "put_cells", optional = true }
 rubbl_core = { version = "0.3.0", optional = true }
 
 # "approx" feature
