--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -39,7 +39,7 @@ jobs:
           # The automake included with MacOS is seemingly old. Updating it fixes
           # some issues.
           if [[ "$OSTYPE" != "linux-gnu"* ]]; then
-            brew install automake
+            brew install automake pkg-config
           fi
 
           curl "https://heasarc.gsfc.nasa.gov/FTP/software/fitsio/c/cfitsio-4.1.0.tar.gz" -o cfitsio.tar.gz
