--- a/Cargo.toml
+++ b/Cargo.toml
@@ -93,6 +93,8 @@ name = "bench_io"
 harness = false
 
 [patch.crates-io]
+# for macos-arm64 support
+rubbl_casatables = { git = "https://github.com/d3v-null/rubbl", branch = "casacore-3.5.0", package = "rubbl_casatables" }
 # TODO: get rid of this once MSRV >= 1.65
 dashmap = { git = "https://github.com/xacrimon/dashmap", tag = "v5.5.2" } # v5.5.3 msrv is 1.65
 regex = { git = "https://github.com/rust-lang/regex", tag = "regex-syntax-0.7.5" } # regex-syntax > 0.8 msrv is 1.65
