--- a/Cargo.toml
+++ b/Cargo.toml
@@ -82,7 +82,7 @@ serial_test = "0.9.0"
 tempfile = "3.3.0"
 
 [build-dependencies]
-built = "0.5.1"
+built = { version = "~0.7.3", default-features = false, features = ["chrono", "git2", "semver"] }
 
 [[bench]]
 name = "bench_misc"
