--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,7 +45,7 @@ hifitime = "3.6.0"
 itertools = "0.10.0"
 lazy_static = "1.4.0"
 log = "0.4.14"
-ndarray = { version = "0.15.4", features = ["rayon"] }
+ndarray = { version = "0.16.0", features = ["rayon"] }
 num-complex = "0.4.1"
 num-traits = "0.2.0"
 rayon = "1.5.0"
@@ -61,7 +61,7 @@ mwalib = { version = "1.3.3", optional = true }
 
 # "ms" feature
 flate2 = { version = "1.0.13", optional = true }
-rubbl_casatables = { version = "0.7.0", optional = true }
+rubbl_casatables = { version = "0.8.0", optional = true }
 
 # "approx" feature
 approx = { version = "0.5.0", features = ["num-complex"], optional = true }
@@ -75,14 +75,18 @@ criterion = "~0.4.0"
 csv = "1.1.0"
 glob = "0.3.0"
 lexical = "6.0.0"
-ndarray = { version = "0.15.4", features = ["approx-0_5"] }
+ndarray = { version = "0.16.0", features = ["approx"] }
 regex = "1.5.0"
 serde_json = "1.0.0"
 serial_test = "0.9.0"
 tempfile = "3.3.0"
 
 [build-dependencies]
-built = { version = "~0.7.3", default-features = false, features = ["chrono", "git2", "semver"] }
+built = { version = "~0.7.3", default-features = false, features = [
+    "chrono",
+    "git2",
+    "semver",
+] }
 
 [[bench]]
 name = "bench_misc"
@@ -94,7 +98,7 @@ harness = false
 
 [patch.crates-io]
 # TODO: get rid of this once MSRV >= 1.65
-dashmap = { git = "https://github.com/xacrimon/dashmap", tag = "v5.5.2" } # v5.5.3 msrv is 1.65
+dashmap = { git = "https://github.com/xacrimon/dashmap", tag = "v5.5.2" }          # v5.5.3 msrv is 1.65
 regex = { git = "https://github.com/rust-lang/regex", tag = "regex-syntax-0.7.5" } # regex-syntax > 0.8 msrv is 1.65
 # TODO: get rid of this once MSRV >= 1.70
 ciborium = { git = "https://github.com/enarx/ciborium", tag = "v0.2.1" } # ciborium-ll v > 0.2.1 needs half ^2.2, half v > 2.3.x msrv is 1.70
